# ESP-CSI-3D-Digital-Twin-Radar-System-

./: .gitignore  Cargo.toml  NEXT_GEN_IMPROVEMENTS.md  README.md  sdkconfig.defaults  smoothie.min.js
.cargo/: config.toml
c51_motor_pid/: C51单片机PID电机速度控制系统设计报告.docx  c51_motor_pid.pdsprj  generate_docx_report.py  generate_pdsprj.py  main.c
pc_client/: README.md  deep_learning_model.py  realworld_renderer.py  requirements.txt  ue5_bridge.py
scratch/: generate_html.py  test_udp_receiver.py
src/: index.html  main.rs
