[package]
name = "rust-esp32-wifi"
version = "0.1.0"
authors = ["thewang <1716775457@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "rust-esp32-wifi"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
esp-idf-hal = { path = "esp-idf-hal" }

[dependencies]
log = "0.4"
anyhow = "1.0"
esp-idf-hal = "0.46.2"
esp-idf-sys = "0.37.2"
embedded-svc = "0.29"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "0.33"
